--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
 <li>Optionally use your own synchronisation, compression and/or cleanup tool</li>
 </ul>
 <h2 id="usage">Usage</h2>
-<p>Run this script daily to generate you configured backup file structure.</p>
+<p>Run this script daily to generate your configured backup file structure.</p>
 <div class="codehilite"><pre><span></span>./backupRotation.sh
 </pre></div>
 <h2 id="configuration">Configuration</h2>
 <p>Simply edit the constants region of the provided shell script.</p>
 <h2 id="installation-under-systemd">Installation (under systemd)</h2>
-<p>Copy the script file "backupRotation.sh" to "/usr/local/bin/" and copy the provided timer and service files (backupRotation.service and backupRotation.timer) to "/etc/systemd/system/" and run</p>
+<p>Copy the script file "backupRotation.sh" to "/usr/bin/backupRotation" and copy the provided timer and service files (backupRotation.service and backupRotation.timer) to "/etc/systemd/system/" and run</p>
 <div class="codehilite"><pre><span></span>systemctl <span class="nb">enable</span> backupRotation.timer
 </pre></div>
 <p>to enable the backup logic. After running:</p>
