--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <h2 id="configuration">Configuration</h2>
 <p>Simply edit the constants region of the provided shell script.</p>
 <h2 id="installation-under-systemd">Installation (under systemd)</h2>
-<p>Copy the script file "backupRotation.sh" to "/usr/bin/backup-rotation" and copy the provided timer and service files ("backupRotation.service" and "backupRotation.timer") to "/etc/systemd/system/backup-rotation.service" and "/etc/systemd/system/backup-rotation.timer" and run:</p>
+<p>Copy the script file "backupRotation.sh" to "/usr/bin/backup-rotation" and the provided timer and service files ("backupRotation.service" and "backupRotation.timer") to "/etc/systemd/system/backup-rotation.service" and "/etc/systemd/system/backup-rotation.timer" and run:</p>
 <div class="codehilite"><pre><span></span>systemctl <span class="nb">enable</span> backup-rotation.timer
 </pre></div>
 <p>to enable the backup logic. After running:</p>
