--- a/index.html
+++ b/index.html
@@ -31,16 +31,20 @@
 <p>or after installation:</p>
 <div class="codehilite"><pre><span></span>backup-rotation
 </pre></div>
-<h2 id="configuration">Configuration</h2>
-<p>Simply edit the constants region of the provided shell script.</p>
-<h2 id="installation-under-systemd">Installation (under systemd)</h2>
-<p>Copy the script file "backupRotation.sh" to "/usr/bin/backup-rotation" and the provided timer and service files ("backupRotation.service" and "backupRotation.timer") to "/etc/systemd/system/backup-rotation.service" and "/etc/systemd/system/backup-rotation.timer" and run:</p>
+<h2 id="installation-with-yourt-from-the-arch-user-repository">Installation with yourt from the arch user repository</h2>
+<div class="codehilite"><pre><span></span>yaourt --sync backupRotation
+</pre></div>
+<h2 id="manual-installation-on-any-posix-compatible-operating-system">Manual installation on any posix compatible operating system</h2>
+<p>Copy the script file "backupRotation.sh" to "/usr/bin/backup-rotation" and the provided timer and service files ("backupRotation.service" and "backupRotation.timer") to "/etc/systemd/system/backup-rotation.service" and "/etc/systemd/system/backup-rotation.timer" and enable services:</p>
+<h2 id="enable-service-under-systemd">Enable service under systemd</h2>
 <div class="codehilite"><pre><span></span>systemctl <span class="nb">enable</span> backup-rotation.timer
 </pre></div>
 <p>to enable the backup logic. After running:</p>
 <div class="codehilite"><pre><span></span>systemctl start backup-rotation.timer
 </pre></div>
 <p>you can see the worker running in your system logs and observe generated backup files.</p>
+<h2 id="configuration">Configuration</h2>
+<p>Simply create a text file under "/etc/backupRotation" and insert bash code which sets all options you want to overwrite.</p>
 </div><div class="about-this-website inner"><h2 id="about-this-website">About this website<!--deDE:Impressum--><!--frFR:Mentions légales--></h2><p>Provider of<!--deDE:Anbieter von--><!--frFR:Fournisseur de--> <a href="http://torben.website/backupRotation">http://torben.website/backupRotation</a>:<br>Torben Sickert<br>Christoph-Mang-Str. 14<br>79100 Freiburg<br>Phone:<!--deDE:Tel.:--><!--frFR:Téléphone:--> <a href="tel:004917610248185">+49 (0) 176<span>/</span>10 248 185</a><br>Email:<!--deDE:E-Mail:--> <a href="mailto:info@torben.website">info@torben.website</a><br>Website: <!--deDE:Webseite:--><!--frFR:Site:--> <a href="http://torben.website">http://torben.website</a><br><span class="glyphicon glyphicon-arrow-left arrow-left-home tools-visible-on-javascript-enabled"></span><a class="tools-visible-on-javascript-enabled" href="#home">home<!--deDE:Startseite--><!--frFR:Maison--></a></p>
 <h2>
 Disclaimer
@@ -92,4 +96,4 @@ Copyright Statement
 <p>
 Unless noted otherwise, all artwork on this website is protected property of the website author. Any use for commercial purpose, reproduction and publication requires the author's written permission. Commercial work created in cooperation or bound by contract with third parties are specifically marked. Respective copyrights apply.</p></div></section><footer class="footer-wrap outer"><div class="inner"><p class="copyright website-start-up-animation-number-7">backupRotation maintained by
 <!--deDE:backupRotation betrieben von-->
-<!--frFR:backupRotation exploité par--> <a href="http://torben.website">thaibault</a> · © 2013 Torben Sickert · <a href="#about-this-website">about this website<!--deDE:Impressum--><!--frFR:Mentions légales--></a></p></div></footer><a href="#top">top<!--deDE:nach oben--><!--frFR:ascendant--></a><script src="index.js?md5=a5e145fd678e93465d48"></script></body></html>
+<!--frFR:backupRotation exploité par--> <a href="http://torben.website">thaibault</a> · © 2013 Torben Sickert · <a href="#about-this-website">about this website<!--deDE:Impressum--><!--frFR:Mentions légales--></a></p></div></footer><a href="#top">top<!--deDE:nach oben--><!--frFR:ascendant--></a><script src="index.js?md5=44b1e253dd2be287be41"></script></body></html>
